--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -1,11 +1,8 @@
 ---
 layout: archive
-permalink: /year-archive/
+permalink: /posts/
 title: "Blog posts"
 author_profile: true
-redirect_from:
-  - /wordpress/blog-posts/
----
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
