--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -3,6 +3,9 @@ layout: archive
 permalink: /posts/
 title: "Blog posts"
 author_profile: true
+redirect_from:
+  - /wordpress/blog-posts/
+---
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
